# mscegm-hkbu-chatbot

./: LICENSE  README.md  build_index.py  config.py  main.py  poetry.lock.bak  pyproject.toml  pyproject.toml.bak  requirements.txt
faiss_index/: index.faiss  index.pkl
