[project]
name = "mscegm-hkbu-chatbot"
version = "0.1.0"
description = "HKBU MScEGM Chatbot"
authors = [
    {name = "Karina Tietz",email = "karina.tietz16@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "openai (>=1.75.0,<2.0.0)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "chromadb (>=0.4.24,<0.5.0)",
    "streamlit-modal (>=0.1.2,<0.2.0)",
    "requests (>=2.32.3,<3.0.0)",
    "faiss-cpu (>=1.7.4,<2.0.0)",
    "langchain (>=0.3.24,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
